2013-09-03 arnaud.fontaine
* ZODB Components: Workflow History must always be kept, so avoid an extra step for developers.

2013-08-28 arnaud.fontaine
* ZODB Components: Migrate Documents, Extensions and Tests.

2012-10-04 arnaud.fontaine
* getPreferredSubversionWorkingCopyList() cannot be set properly.

2012-04-19 Kazuhiko
* add TypesTool_viewRoleInformationList that lists all Role Informations.

2011-08-08 yusei
* Extract messages from constraints in ZODB property sheets for POT.

2011-04-14 yusei
* Remove old unnecessary tales expression from relation string field.

2011-04-04 Kazuhiko
* configure searchable text property ids and method ids for Bug.

2010-10-19 Kazuhiko
* When checking duplicated selection names, we should use get_recursive_orig_value('selection_name') instead of getRecursiveTemplateField().get_value('selection_name'), because delegation for selection_name can end at any intermediate proxy field. And skip an empty selection name that is now valid for a listbox where we don't want to store a selection.

2010-10-19 yo
* When checking duplicated selection names, skip field libraries, as they don't matter.

2010-10-11 lucas
* Now portal_type_group_list is an optional param for the script BaseType_copyRoleList.

2010-03-02 yusei
* Remove short title.

2010-02-24 yusei
* Move Software Release and Software Publication to erp5_forge_release to remove dependencies to crm and dms.

2010-02 jps
* added Software Release portal type
* added Software Publication portal type
* removed upload module
* added optional dependency to DMS (Software Release) and CRM (Software Publication)

2010-02-18 tatuya
* Fix a issue that Bug document can not cancel the bug, because it can not add a content when cancelled state and the transition try to create an event.

2009-11-18 yusei
* Fix wrong python script parameter.

2009-10-16 yusei
* Update for the changes of new portal types of portal types.

2009-09-11 Kazuhiko